# rgames

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.devcontainer/: devcontainer.json
snake/: Cargo.toml
snake/src/: main.rs
spider/: Cargo.toml
spider/src/: card.rs  game.rs  game_suit_prompt.rs  main.rs
