[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1", features = ["serde"] }
tui = "0.19"
rand = "0.8.5"
uuid = { version = "1.3.1", features = ["v4", "macro-diagnostics"] }
once_cell = "1.17.1"
